# Self-Ripple-POC

./: README.md
anansepay-android/: .gitignore  build.gradle  gradle.properties  settings.gradle
anansepay-android/app/: build.gradle  proguard-rules.pro
anansepay-android/gradle/wrapper/: gradle-wrapper.properties
anansepay-android/ripplelibpp-debug/: build.gradle
anansepay-android/ripplelibpp-release/: build.gradle
anansepay-gateway/: .gitignore  ClientAPI.md  README.md  build.gradle  settings.gradle
anansepay-gateway/anansepay-common/: build.gradle
anansepay-gateway/anansepay-gateway-admin/: build.gradle
anansepay-gateway/anansepay-gateway-web/: build.gradle
anansepay-gateway/gradle/wrapper/: gradle-wrapper.properties
ripple-libpp-android/: .gitignore  .gitmodules  README.md  settings.gradle
ripple-libpp-android/app/: build.gradle
ripple-libpp-android/gradle/wrapper/: gradle-wrapper.properties
ripple-libpp-android/ripplelibpp/: CMakeLists.txt  build.gradle
ripple-libpp-android/ripplelibpp/src/androidTest/java/com/ripple/ripplelibpp/: ExampleInstrumentedTest.java
ripple-libpp-android/ripplelibpp/src/main/: AndroidManifest.xml
ripple-libpp-android/ripplelibpp/src/main/cpp/: BeastConfig.h  pointer.h  ripplelibpp.cpp  wAccountID.cpp  wBlob.cpp  wBuffer.cpp  wCurrency.cpp  wIssue.cpp  wPublicKey.cpp  wSTAmount.cpp  wSTTx.cpp  wSecretKey.cpp  wSeed.cpp  wSerializer.cpp  wSlice.cpp
ripple-libpp-android/ripplelibpp/src/main/cpp/boost/: build-all.sh  build-android.sh  configure.sh
ripple-libpp-android/ripplelibpp/src/main/cpp/boost/targets/: android.gcc-arm64-v8a.jam  android.gcc-armeabi-v7a.jam  android.gcc-armeabi.jam  android.gcc-mips.jam  android.gcc-mips64.jam  android.gcc-x86.jam  android.gcc-x86_64.jam
ripple-libpp-android/ripplelibpp/src/main/cpp/openssl/: build-android.sh  build.sh  configure.sh
ripple-libpp-android/ripplelibpp/src/main/java/com/ripple/ripplelibpp/: AccountID.java  Blob.java  Buffer.java  Credentials.java  Currency.java  Issue.java  KeyType.java  Pair.java  PublicKey.java  RippleLibPP.java  STAmount.java  STTx.java  SecretKey.java  Seed.java  Serializer.java  Slice.java  TokenType.java  TxFlags.java  TxType.java
ripple-libpp-android/ripplelibpp/src/main/res/values/: strings.xml
ripple-libpp-android/ripplelibpp/src/test/java/com/ripple/ripplelibpp/: ExampleUnitTest.java
ripple-libpp-ios/: .gitignore  .gitmodules  README.md
ripple-libpp-ios/ripple-libpp-ios.xcworkspace/: contents.xcworkspacedata
ripple-libpp-ios/ripplelibpp/: .gitignore
ripple-libpp-ios/ripplelibpp/boost/: build-all.sh  (+1 more)
(+212 files in other folders)
